docs/gko/4.11/overview/custom-resource-definitions/application.md
# Application

The `Application` custom resource represents the configuration for a Gravitee application. To access Gravitee APIs, consumers must register an application and subscribe to a published API plan. Applications act on behalf of the user to request tokens, provide user identity information, and consume APIs.

## Type of applications

Gravitee applications fall into two main categories:

* **Simple applications:** These are self-contained and entirely managed within Gravitee
* **Web, SPA, Native, and Backend-to-backend applications:** Also know as OAuth applications, or OAuth clients, these can only be created if you have activated Dynamic Client Registration (DCR) in APIM. Using DCR, Gravitee will refer to an external identity provider (such as Gravitee Access Management, Keycloak, or Ping Federate) to request creation of the application. Gravitee will receive the application's client ID and client secret in response. This allows you to set up OAuth and JWT authentication patterns that involve coordination across the application, Gateway, and authorization server.

### UI Display Behavior

When an application has multiple certificates (`certificate_count > 1`), the UI displays a warning banner:

{% hint style="warning" %}
This application has {count} active certificates. The one displayed is the most recently created.
{% endhint %}

Only the most recently created certificate is shown in the UI when multiple certificates exist.

## Simple applications

The example below shows a simple `Application` custom resource definition:

<pre class="language-yaml"><code class="lang-yaml"><strong>apiVersion: gravitee.io/v1alpha1
</strong>kind: Application
metadata:
  name: simple-application
spec:
  contextRef:
    name: "management-context-1"
  name: "simple-application"
  description: "This is a SIMPLE application, which means it is entirely managed by Gravitee"
  settings:
    app:
      clientId: "my-client-id"
</code></pre>

Here is the same `Application` resource with support for application metadata:

```yaml
apiVersion: gravitee.io/v1alpha1
kind: Application
metadata:
  name: simple-application
spec:
  contextRef:
    name: "management-context-1"
  name: "simple-application"
  description: "This is a SIMPLE application, which means it is entirely managed by Gravitee"
  settings:
    app:
      clientId: "my-client-id"
  metadata:
  - name: "test metadata 1"
    format: "STRING"
  - name: "test metadata 2"
    format: "STRING"
```

## OAuth applications

OAuth application types require Dynamic Client Registration to be activated in APIM.

Below is an example of a `web` application type CRD:

```yaml
apiVersion: gravitee.io/v1alpha1
kind: Application
metadata:
  name: web-application
spec:
  contextRef:
    name: "management-context-1"
  name: "web-application"
  description: "K8s WEB application"
  domain: "https://example.com"
  settings:
    oauth:
      applicationType: WEB
      redirectUris:
        - "https://example.com"
      grantTypes:
        - authorization_code
  metadata:
  - name: "test metadata 1"
    format: "STRING"
  - name: "test metadata 2"
    format: "STRING"
```

You cannot provide a custom client ID as part of the creation of a `web` application. The client ID is generated by the external identity provider configured in APIM's DCR settings.

## The `Application` lifecycle

The following workflow is applied when a new `Application` resource is added to the cluster:

1. The GKO listens for `Application` resources.
2. The GKO resolves any references to external sources such as ConfigMaps or Secrets.
3. The GKO performs required changes, such as adding default settings.
4. The GKO converts the data to JSON format.
5. The GKO compares the definition to the existing definition. If something has changed, the GKO pushes the definition to the Management API (if a `ManagementContext` resource is provided).

The `Application` resource has a `Processing Status` field used to view the status of the resource in the cluster. The following `Processing Status` field values are possible:

| Status      | Description                                                                                                                              |
| ----------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| \[None]     | The application has been created but not processed yet.                                                                                  |
| Completed   | The application has been created or updated successfully.                                                                                |
| Reconciling | The operator has encountered a recoverable error. A retry will be performed every 5 seconds until the cluster retry limit is reached.    |
| Failed      | The operator has encountered an unrecoverable error. These are errors that require manual action to correct. No retry will be performed. |

Events are added to the resource as part of each action performed by the operator. To view these events, ensure that the CRD creation steps described above are completed, then run the following command:

```sh
kubectl describe -n gravitee application.gravitee.io basic-application
```

Example output:

```bash
Name:         basic-application
Namespace:    gravitee
[...]
Events:
  Type    Reason          Age   From                      Message
  ----    ------          ----  ----                      -------
  Normal  AddedFinalizer  73s   application-controller  Added Finalizer for the Application
  Normal  Creating        73s   application-controller  Creating Application
  Normal  Created         72s   application-controller  Created Application
```

{% hint style="info" %}
**For more information:**

* The `Application` CRD code is available on [GitHub](https://github.com/gravitee-io/gravitee-kubernetes-operator/blob/master/api/v1alpha1/application_types.go).
* The `Application` CRD API reference is documented [here](../../reference/api-reference.md).
{% endhint %}

### Overview

Client certificates transition through four statuses based on validity windows and manual actions. During the TLS handshake, the gateway computes a SHA-256 fingerprint of the client certificate and uses this fingerprint to look up the associated subscription.

### Certificate Creation Workflow

For certificate creation instructions, see [mTLS Client Certificate Validation and Cache Behavior](../../guides/mtls-client-certificate-validation-and-cache-behavior.md#creating-client-certificates).

### Fingerprint Uniqueness

Certificate fingerprints must be unique across all active applications (status != REVOKED) within an environment.

The `existsByFingerprintAndActiveApplication()` repository method returns `true` if a fingerprint already exists for an active application.

{% hint style="info" %}
Only applications with a status other than REVOKED are checked for fingerprint uniqueness.
{% endhint %}


